# hello-app-fork

./: .dockerignore  .gitignore  BUILD.bazel  DEPLOY.md  Dockerfile.api  Dockerfile.web  MODULE.bazel  Makefile  README.md  compose.yaml  go.mod  noai-sentinel.txt
.adiom/: config.json
.aspect/rules/external_repository_action_cache/: npm_translate_lock_Mjk0MjQ1NjA5
.github/workflows/: publish.yml
api/: BUILD.bazel  main.go  main_test.go
deploy/: BUILD.bazel  DATABASE.md
deploy/app/base/: api-deployment.yaml  api-service.yaml  http-route.yaml  kustomization.yaml  web-deployment.yaml  web-service.yaml
deploy/app/overlays/dev/: patch.yaml
deploy/app/overlays/preview/: patch.yaml
deploy/base/: api-deployment.yaml  api-service.yaml  http-route.yaml  kustomization.yaml  postgres-cluster.yaml  web-deployment.yaml  web-service.yaml
deploy/overlays/dev/: kustomization.yaml  patch.yaml  route-patch.yaml
deploy/overlays/prod/: kustomization.yaml  patch.yaml  route-patch.yaml
deploy/preview/: nginx.conf
tools/: container_layers.bzl  go_binary.bzl  status.sh
web/: BUILD.bazel  index.html  package-lock.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
web/nginx/: default.conf
web/src/: App.jsx  styles.css
