load("@rules_oci//oci:defs.bzl", "oci_image")
load("//tools:container_layers.bzl", "go_api_layer", "web_static_layer")

package(default_visibility = ["//visibility:public"])

go_api_layer(
    name = "api_layer",
    srcs = glob(["api/**"]) + [
        "go.mod",
        "go.sum",
    ],
    go = "@go_sdk//:bin/go",
    sdk = "@go_sdk//:all",
)

oci_image(
    name = "api_image",
    architecture = "amd64",
    entrypoint = ["/hello-app-fork-api"],
    exposed_ports = ["18081"],
    os = "linux",
    tars = [":api_layer"],
)

web_static_layer(
    name = "web_layer",
    dist = "//web:dist",
    nginx_conf = "//web:nginx/default.conf",
)

oci_image(
    name = "web_image",
    base = "@nginx_unprivileged_linux_amd64",
    exposed_ports = ["8080"],
    tars = [":web_layer"],
)
