load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_lib//lib:tar.bzl", "tar")
load("@rules_go//go:def.bzl", "go_binary")
load("@rules_oci//oci:defs.bzl", "oci_image")

package(default_visibility = ["//visibility:public"])

go_binary(
    name = "hello-app-fork-api",
    embed = ["//api:api"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

copy_to_directory(
    name = "api_layer_root",
    srcs = [":hello-app-fork-api"],
    root_paths = ["hello-app-fork-api_"],
)

tar(
    name = "api_layer",
    include_runfiles = False,
    args = ["-s", "#^api_layer_root/##"],
    srcs = [":api_layer_root"],
)

oci_image(
    name = "api_image",
    architecture = "amd64",
    entrypoint = ["/hello-app-fork-api"],
    exposed_ports = ["18081"],
    os = "linux",
    tars = [":api_layer"],
)

copy_to_directory(
    name = "web_layer_root",
    srcs = [
        "//web:dist",
        "//web:nginx/default.conf",
    ],
    replace_prefixes = {
        "default.conf": "etc/nginx/conf.d/default.conf",
        "dist": "usr/share/nginx/html",
    },
    root_paths = [
        "web",
        "web/nginx",
    ],
)

tar(
    name = "web_layer",
    args = ["-s", "#^web_layer_root/##"],
    srcs = [":web_layer_root"],
)

oci_image(
    name = "web_image",
    base = "@nginx_unprivileged_linux_amd64",
    exposed_ports = ["8080"],
    tars = [":web_layer"],
)
