module(
    name = "hello_app_fork",
    version = "0.1.0",
)

bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_flux_deploy", version = "0.1.0")
bazel_dep(name = "aspect_rules_js", version = "3.2.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = "bazel_lib")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")

git_override(
    module_name = "rules_flux_deploy",
    commit = "c3f1c3eef0e8670a942f6f63f0198835c3272f16",
    remote = "https://github.com/adiom-data/bazel-rules.git",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "nginx_unprivileged",
    image = "index.docker.io/nginxinc/nginx-unprivileged",
    platforms = ["linux/amd64"],
    reproducible = False,
    tag = "1.29-alpine",
)
use_repo(
    oci,
    "nginx_unprivileged",
    "nginx_unprivileged_linux_amd64",
)

flux_deploy_deps = use_extension(
    "@rules_flux_deploy//flux_deploy:extensions.bzl",
    "flux_deploy_dependencies",
)
use_repo(flux_deploy_deps, "rules_flux_deploy_tools")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_jackc_pgx_v5")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//web:package.json",
        "//web:pnpm-workspace.yaml",
    ],
    npm_package_lock = "//web:package-lock.json",
    pnpm_lock = "//web:pnpm-lock.yaml",
    update_pnpm_lock = True,
)
use_repo(npm, "npm")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "go_sdk",
    build_file_content = """
filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

exports_files(["bin/go"])
""",
    sha256 = "2852af0cb20a13139b3448992e69b868e50ed0f8a1e5940ee1de9e19a123b613",
    strip_prefix = "go",
    urls = ["https://go.dev/dl/go1.25.0.linux-amd64.tar.gz"],
)
