load(
    "@rules_flux_deploy//flux_deploy:defs.bzl",
    "deploy_image",
    "image_kustomization",
    "publish_bundle_set",
)

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "deploy_srcs",
    srcs = glob(["**"]),
)

filegroup(
    name = "app_deploy_srcs",
    srcs = glob(["app/**"]),
)

filegroup(
    name = "database_deploy_srcs",
    srcs = glob(["database/**"]),
)

deploy_image(
    name = "api_image",
    image = "//:api_image",
    repository_suffix = "hello-app-fork-api",
    yaml_ref = "ghcr.io/adiom-data/hello-app-fork-api",
)

deploy_image(
    name = "web_image",
    image = "//:web_image",
    repository_suffix = "hello-app-fork-web",
    yaml_ref = "ghcr.io/adiom-data/hello-app-fork-web",
)

image_kustomization(
    name = "app_deploy",
    artifact_suffix = "hello-app-fork-deploy",
    bundle_name = "app",
    force = False,
    images = [
        ":api_image",
        ":web_image",
    ],
    kustomize_dirs = ["base"],
    overlay_path = "./overlays/prod",
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/app",
    srcs = [":app_deploy_srcs"],
    stamp = True,
    wait = True,
)

image_kustomization(
    name = "app_preview_deploy",
    artifact_suffix = "hello-app-fork-deploy",
    bundle_name = "app",
    force = False,
    images = [
        ":api_image",
        ":web_image",
    ],
    kustomize_dirs = ["base"],
    overlay_path = "./overlays/preview",
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/app",
    srcs = [":app_deploy_srcs"],
    stamp = True,
    wait = True,
)

image_kustomization(
    name = "database_deploy",
    artifact_suffix = "hello-app-fork-database-deploy",
    bundle_name = "database",
    force = False,
    images = [],
    overlay_path = "./overlays/prod",
    source_prefix = "deploy/database",
    srcs = [":database_deploy_srcs"],
    stamp = True,
)

image_kustomization(
    name = "database_preview_deploy",
    artifact_suffix = "hello-app-fork-database-deploy",
    bundle_name = "database",
    force = False,
    images = [],
    overlay_path = "./overlays/preview",
    source_prefix = "deploy/database",
    srcs = [":database_deploy_srcs"],
    stamp = True,
)

publish_bundle_set(
    name = "publish",
    bundles = [
        ":database_deploy",
        ":app_deploy",
    ],
    push_prefix = "{STABLE_REFERENCE_PREFIX}",
    manifest_tag = "release",
    skip_existing = True,
    stamp = True,
)

publish_bundle_set(
    name = "publish_preview",
    all_name = "publish_preview_all",
    bundles = [
        ":database_preview_deploy",
        ":app_preview_deploy",
    ],
    push_prefix = "{STABLE_REFERENCE_PREFIX}",
    stamp = True,
)
